@@ -1,5 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.1.3
+  *) [TS-1124] Move regex_remap, header_filter and stats_over_http from
+   the plugin repo to the main repo.
+
   *) [TS-1111] fix crash in RangeTransform::handle_event
 
   *) [TS-1109] fix stack dump crashing
